# zmsh

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: style.yml  test.yml
demo/: 00-convex-hull.ipynb  convex-hull-3d.ipynb  convex-hull.ipynb  delaunay.ipynb  simplification.ipynb
src/zmsh/: __init__.py  convex_hull.py  delaunay.py  examples.py  geometry.py  polytopal.py  predicates.py  simplicial.py  simplification.py  topology.py  transformations.py
test/: convex_hull_test.py  delaunay_test.py  face_split_test.py  geometry_test.py  hull_test.py  merge_test.py  plotting_test.py  random_poly_test.py  simplex_test.py  simplicial_test.py  simplification_test.py  test_hull.py  test_topology.py  topology_test.py  transformations_test.py
zmsh/: __init__.py  convex_hull.py  delaunay.py  examples.py  geometry.py  hull.py  plotting.py  predicates.py  topology.py  transformation.py
