[project]
name = "zmsh"
version = "0.2.0"
authors = [
    { name="Daniel Shapero", email="shapero.daniel@gmail.com" },
]
description = "mesh topology transformation"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy >= 1.22",
    "scipy >= 1.10",
    "matplotlib >= 3.4",
    "predicates @ git+https://github.com/topomesh/predicates"
]

[project.urls]
"Homepage" = "https://github.com/topomesh/zmsh"
